<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="#ffffffff"
                                                   style="@style/myTheme"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
            android:id="@+id/personal_center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
    >
        <androidx.appcompat.widget.Toolbar
                android:id="@+id/personal_center_message_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="编辑资料"
                        android:textSize="20sp"
                        android:layout_centerInParent="true"
                >
                </TextView>
                <TextView
                        android:id="@+id/personal_center_edit_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_center_edit_save"
                        android:textSize="18sp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp"
                        android:layout_marginEnd="10dp" android:layout_alignParentEnd="true"
                        tools:ignore="RelativeOverlap">
                </TextView>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
        <RelativeLayout
                android:id="@+id/personal_center_edit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical"
        >
            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_head_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/head"
                    android:scaleType="centerCrop"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000"/>
        </RelativeLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
        >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="10dp"
            >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_center_edit_username"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp">
                </TextView>
                <EditText
                        android:id="@+id/personal_center_edit_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="text"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="20dp"
                >
                </EditText>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="10dp"
            >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_center_edit_sex"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                >
                </TextView>
                <EditText
                        android:id="@+id/personal_center_edit_sex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="text"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                >
                </EditText>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="10dp"
            >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_center_edit_age"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                >
                </TextView>
                <EditText
                        android:id="@+id/personal_center_edit_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                >
                </EditText>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="10dp"
            >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_center_edit_height"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                >
                </TextView>
                <EditText
                        android:id="@+id/personal_center_edit_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                >
                </EditText>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="10dp"
            >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_center_edit_weight"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                >
                </TextView>
                <EditText
                        android:id="@+id/personal_center_edit_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                >
                </EditText>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
