<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
        android:id="@+id/personal_center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
>
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/personal_center_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="个人中心"
           app:titleMarginStart="165dp"
    >
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
            android:id="@+id/personal_center_head"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
    >
        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_head_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="160dp"
                android:src="@drawable/head"
                android:scaleType="centerCrop"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"
                android:layout_marginStart="160dp"/>
        <TextView
                android:id="@+id/user_id"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:text="用户15298917738"
        >
        </TextView>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="10dp"
        >
            <ImageView
                    android:id="@+id/personal_center_msg_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/user_image"
            >
            </ImageView>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_center_message"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp">
            </TextView>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="10dp"
        >
            <ImageView
                    android:id="@+id/personal_center_machine_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/machine"
            >
            </ImageView>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_center_machines"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
            >
            </TextView>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="10dp"
        >
            <ImageView
                    android:id="@+id/personal_center_history_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/history"
            >
            </ImageView>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_center_history"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
            >
            </TextView>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="10dp"
        >
            <ImageView
                    android:id="@+id/personal_center_about_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/about"
            >
            </ImageView>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_center_aboutUs"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
            >
            </TextView>
        </LinearLayout>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:width="250dp"
                android:background="@drawable/logout_button"
                android:text="退出登录"
        >
        </Button>
    </LinearLayout>

</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
